# TMC2130Stepper

./: .gitignore  CMakeLists.txt  README.md  TMC2130Stepper.code-workspace  Toolchain-bb.cmake  main  main.cpp  setup.py
examples/: homex.cpp  testconnection.cpp  testxconnection.cpp  testyconnection.cpp  testzconnection.cpp
python/src/: main.cpp
src/: TMC2130Stepper.h
src/source/: SPIDevice.cpp  SPIDevice.h  TMC2130Stepper.cpp  generic-gpio.cc  generic-gpio.h  motor-interface-constants.h
